--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -7,7 +7,9 @@
 	<TextView android:layout_width="fill_parent"
 		android:layout_height="wrap_content" android:text="@string/hello" />
 	<FrameLayout android:id="@+id/frame" android:layout_width="fill_parent"
-		android:layout_height="fill_parent" android:background="@drawable/repeat_image">
+		android:layout_height="fill_parent"
+		>
+		<!--  android:background="@drawable/repeat_image"> -->
 		<jp.namu.view.MySurfaceView android:id="@+id/MySurfaceView01"
 			android:layout_width="fill_parent" android:layout_height="300dp" 
 			/>
